K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tejasaiandem-kubernetes-deployment
  namespace: tj
  labels:
    app: tejasaiandem-kubernetes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tejasaiandem-kubernetes
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: tejasaiandem-kubernetes
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: environment
                    operator: In
                    values: newcontainerforaks.azurecr.io/tejasaiandem/kubernetes:latest
                      - production
      containers:
        - name: tejasaiandem-kubernetes
          image: 
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /_status/healthz
              port: 5000
            initialDelaySeconds: 8
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /readiness
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 5
