K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tejasaiandem/kubernetes
  namespace: default
spec:
  selector:
    app: tejasaiandem/kubernetes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
